--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
   "scripts": {
     "binaryprep": "cd potrace && ./configure && make && make install && cd ..",
     "build": "gulp build",
-    "postinstall": "npm run build && npm run binaryprep",
+    "postinstall": "npm run binaryprep",
     "test": "mocha --compilers js:babel-core/register --recursive './src/**/*.spec.js'"
   },
   "devDependencies": {
-    "mocha": "^3.1.1"
-  },
-  "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.26.0",
     "gulp": "latest",
     "gulp-babel": "latest",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0",
+    "mocha": "^3.1.1",
+    "webpack-node-externals": "^1.6.0",
+    "webpack-stream": "^4.0.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "jimp": "^0.2.28",
     "minimist": "^1.2.0",
     "rimraf": "^2.6.2",
-    "webfonts-generator": "^0.4.0",
-    "webpack-node-externals": "^1.6.0",
-    "webpack-stream": "^4.0.0"
+    "webfonts-generator": "^0.4.0"
   },
   "author": "Lance Whatley",
   "license": "MIT"
