--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
-  "presets": [ "env" ],
-  "plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": true
-    }]
+  "presets": [
+    [
+      "@babel/preset-env", {
+        "targets": {
+          "node": "current"
+        },
+        "useBuiltIns": "entry",
+        "corejs": 3
+      }
+    ]
   ]
 }
