--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create fonts from your pictures.",
   "main": "dist",
   "engines": {
-    "node": "10.14.1"
+    "node": "12.9.1"
   },
   "repository": {
     "type": "git",
@@ -13,20 +13,20 @@
   "scripts": {
     "binaryprep": "cd potrace && ./configure && make && make install && cd ..",
     "build": "gulp build",
-    "postinstall": "npm run binaryprep",
+    "postinstall": "npm run binaryprep && npm run build",
     "test": "mocha --compilers js:babel-core/register --recursive './src/**/*.spec.js'"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "babel-loader": "^8.0.5",
+    "core-js": "^3.0.1",
     "gulp": "latest",
-    "gulp-babel": "latest",
-    "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
     "mocha": "^3.1.1",
+    "regenerator-runtime": "^0.13.3",
     "webpack-node-externals": "^1.6.0",
     "webpack-stream": "^4.0.0"
   },
