--- a/potrace/check/Makefile
+++ b/potrace/check/Makefile
@@ -85,8 +85,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-apple-darwin17.5.0
-host_triplet = x86_64-apple-darwin17.5.0
+build_triplet = x86_64-apple-darwin18.7.0
+host_triplet = x86_64-apple-darwin18.7.0
 check_PROGRAMS = pgmdiff$(EXEEXT) checkbin$(EXEEXT)
 subdir = check
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -377,15 +377,15 @@ TEST_LOG_COMPILE = $(TEST_LOG_COMPILER) $(AM_TEST_LOG_FLAGS) \
 am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/depcomp \
 	$(top_srcdir)/mkinstalldirs $(top_srcdir)/test-driver
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/whatley/nodejs/picfont/potrace/missing aclocal-1.15
+ACLOCAL = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_CPPFLAGS = 
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /Users/whatley/nodejs/picfont/potrace/missing autoconf
-AUTOHEADER = ${SHELL} /Users/whatley/nodejs/picfont/potrace/missing autoheader
-AUTOMAKE = ${SHELL} /Users/whatley/nodejs/picfont/potrace/missing automake-1.15
+AUTOCONF = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/missing autoconf
+AUTOHEADER = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/missing autoheader
+AUTOMAKE = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/missing automake-1.15
 AWK = awk
 CADD = 
 CC = clang
@@ -410,7 +410,7 @@ EXTRA_LIBS =  -lz
 EXTRA_OBJS = 
 FGREP = /usr/bin/grep -F
 GREP = /usr/bin/grep
-INSTALL = /usr/local/bin/ginstall -c
+INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
@@ -426,10 +426,10 @@ LIPO = lipo
 LN_S = ln -s
 LTLIBOBJS = 
 LT_SYS_LIBRARY_PATH = 
-MAKEINFO = ${SHELL} /Users/whatley/nodejs/picfont/potrace/missing makeinfo
+MAKEINFO = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/missing makeinfo
 MANIFEST_TOOL = :
 MKBITMAP = mkbitmap
-MKDIR_P = /usr/local/bin/gmkdir -p
+MKDIR_P = .././install-sh -c -d
 NM = /usr/bin/nm -B
 NMEDIT = nmedit
 OBJDUMP = objdump
@@ -452,10 +452,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 1.15
-abs_builddir = /Users/whatley/nodejs/picfont/potrace/check
-abs_srcdir = /Users/whatley/nodejs/picfont/potrace/check
-abs_top_builddir = /Users/whatley/nodejs/picfont/potrace
-abs_top_srcdir = /Users/whatley/nodejs/picfont/potrace
+abs_builddir = /Users/lancewhatley/nodejs/picfont/potrace/check
+abs_srcdir = /Users/lancewhatley/nodejs/picfont/potrace/check
+abs_top_builddir = /Users/lancewhatley/nodejs/picfont/potrace
+abs_top_srcdir = /Users/lancewhatley/nodejs/picfont/potrace
 ac_ct_AR = ar
 ac_ct_CC = clang
 ac_ct_DUMPBIN = 
@@ -465,10 +465,10 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-apple-darwin17.5.0
+build = x86_64-apple-darwin18.7.0
 build_alias = 
 build_cpu = x86_64
-build_os = darwin17.5.0
+build_os = darwin18.7.0
 build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
@@ -476,15 +476,15 @@ datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-apple-darwin17.5.0
+host = x86_64-apple-darwin18.7.0
 host_alias = 
 host_cpu = x86_64
-host_os = darwin17.5.0
+host_os = darwin18.7.0
 host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/whatley/nodejs/picfont/potrace/install-sh
+install_sh = ${SHELL} /Users/lancewhatley/nodejs/picfont/potrace/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
